plugins/ros/src/components/riskMatrix/CurrentRisk.module.css
.currentRiskBarWrapper {
  position: relative;
}

.currentRiskBarContainer {
  width: 100%;
  height: 50px;
  border-radius: 8px;
  overflow: hidden;
  position: relative;
  border: 2px solid black;
}

.currentRiskBarFill {
  position: absolute;
  width: 100%;
  left: 0;
  top: 0;
  bottom: 0;
}

.currentRiskMarker {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 2px;
  background-color: var(--bui-black);
  transform: translateX(-50%);
  transition: left 0.3s ease;
}

.currentRiskPercentageLabel {
  position: absolute;
  top: calc(100% + 6px);
  transform: translateX(-50%);
  white-space: nowrap;
  pointer-events: none;
  transition: left 0.3s ease;
}

.reductionDialog {
  width: 600px;
}

